fix(button): alignment of icons with text

--- a/src/framework/theme/components/button/button.component.scss
+++ b/src/framework/theme/components/button/button.component.scss
@@ -10,7 +10,8 @@
   appearance: none;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   white-space: nowrap;
   vertical-align: middle;
   user-select: none;
